[metadata]
name = musages
version = 0.1.0
description = Collect methods usage statistic from the given module
licence = Apache
licence_file = LICENSE
author = madlabman

[options]
py_modules = musages
python_required = >= 3.6

[options.entry_points]
console_scripts =
    musages = musages:main

[flake8]
max-line-length = 120
